修复弃用的方法